--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
   </head>
   <body>
     <header>
-      <h1>Marion SANSON</h1>
+      <h1>Marion Sanson</h1>
 
-<a class="menu-toggle"href="#main-menu">open menu</a>
-      <nav id="main-menu">
-        <a class="menu-close" href="#"></a>
-      <ul>
-        <li><a href="#projects">projects</a></li>
-        <li><a href="#photos">photos</a></li>
-        <li><a href="#aboutme">about me</a></li>
-        <li><a href="#contact">contact</a></li>
-      </ul>
-    </nav>
-
-<a href="#" class="backdrop"></a>
+<nav>
+   <ul id="conteneur">
+     <li><a href="#projects">projects</a></li>
+     <li><a href="#photos">photos</a></li>
+     <li><a href="#aboutme">about me</a></li>
+     <li><a href="#contact">contact</a></li>
+   </ul>
+</nav>
     </header>
+
+
 
     <main>
       <section id="projects">
@@ -32,75 +30,62 @@
 
         <div class="project-box-container">
 
-
 <div class="project-feature">
-  <figure>
-    <img src="images/abeille-lino.jpg" alt="">
-    <figcaption>This is a detail of my project</figcaption>
-  </figure>
   <h2>Illustration</h2>
-  <a href="project-01.html">click to see more</a>
+  <a href="project-01.html">
+    <img src="images/abeille-lino.jpg" />
+  </a>
 
 
 </div>
 
 <div class="project-feature">
-  <figure>
-    <img src="images/pack.jpg" alt="">
-    <figcaption>This is a detail of my project</figcaption>
-  </figure>
   <h2>Packaging</h2>
-  <a href="project-01.html">click to see more</a>
+  <a href="project-01.html">
+    <img alt="packaging" src="images/pack.jpg" />
+  </a>
 
 </div>
 
-
 <div class="project-feature">
-  <figure>
-    <img src="images/aqua.jpg" alt="">
-    <figcaption>This is a detail of my project</figcaption>
-  </figure>
   <h2>Watercolor</h2>
-  <a href="project-01.html">click to see more</a>
+  <a href="project-01.html">
+<img src="images/aqua.jpg" alt=""/>
+  </a>
 
 </div>
 
 <div class="project-feature">
-  <figure>
-    <img src="images/layout.jpg" alt="">
-    <figcaption>This is a detail of my project</figcaption>
-  </figure>
   <h2>Layout</h2>
-  <a href="project-01.html">click to see more</a>
+  <a href="project-01.html">
+<img src="images/layout.jpg" />
+  </a>
 
 </div>
 
 <div class="project-feature">
-  <figure>
-    <img src="images/poster.jpg" alt="">
-    <figcaption>This is a detail of my project</figcaption>
-  </figure>
   <h2>Poster</h2>
-  <a href="project-01.html">click to see more</a>
+  <a href="project-01.html">
+<img src="images/poster.jpg" />
+  </a>
 
 </div>
 
 <div class="project-feature">
-  <figure>
-    <img src="images/typo.jpg" alt="">
-    <figcaption>This is a detail of my project</figcaption>
-  </figure>
+
   <h2>Typography</h2>
-  <a href="project-01.html">click to see more</a>
+  <a href="project-01.html">
+    <img src="images/typo.jpg" />
+  </a>
 
 </div>
-
 
 
   </div>
 
-
       </section>
+
+
 
       <section id="photos">
         <h1>photography</h1>
