--- a/index.html
+++ b/index.html
@@ -2,83 +2,88 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>hello world !</title>
+    <title>Marion Sanson's Portfolio</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/typo.css">
     <link rel="stylesheet" href="css/master.css">
-
   </head>
   <body>
     <header>
-      <h1>Marion Sanson</h1>
-
+      <h1>Marion Sanson<br/><span class="portfolio">portfolio</span></h1>
 <nav>
    <ul id="conteneur">
-     <li><a href="#projects">projects</a></li>
+     <li><a href="#projets">projets</a></li>
      <li><a href="#photos">photos</a></li>
-     <li><a href="#aboutme">about me</a></li>
+     <li><a href="#àpropos">à propos</a></li>
      <li><a href="#contact">contact</a></li>
    </ul>
 </nav>
     </header>
 
-
-
     <main>
-      <section id="projects">
-        <h1>projects</h1>
+      <section id="projets">
+        <h3>projets</h3>
 
         <div class="project-box-container">
-
-<div class="project-feature">
-  <h2>Illustration</h2>
-  <a href="project-01.html">
-    <img src="images/abeille-lino.jpg" />
-  </a>
-
-
+          <figure>
+          <div class="project-feature">
+<a class="image-lino" href="project-01.html">
+  <img class="lino" src="images/abeille-lino.jpg"/>
+  <span class="lino-txt">Linogravure</span>
+</a>
 </div>
+</figure>
 
+<figure>
 <div class="project-feature">
-  <h2>Packaging</h2>
-  <a href="project-01.html">
-    <img alt="packaging" src="images/pack.jpg" />
+  <a class="image-aqua" href="projet02.html">
+<img class="aqua" src="images/aqua.jpg" />
+<span class="aqua-txt">Aquarelle</span>
   </a>
-
 </div>
+</figure>
 
+
+<figure>
 <div class="project-feature">
-  <h2>Watercolor</h2>
-  <a href="project-01.html">
-<img src="images/aqua.jpg" alt=""/>
+  <a class="image-edition" href="projet03.html">
+    <img class="edition" src="images/edition2.jpg" />
+    <span class="edition-txt">Edition</span>
   </a>
-
 </div>
+</figure>
 
+
+<figure>
 <div class="project-feature">
-  <h2>Layout</h2>
-  <a href="project-01.html">
-<img src="images/layout.jpg" />
+  <a class="image-identite" href="projet04.html">
+    <img class="identite" src="images/IDvisuelle.jpg" />
+    <span class="identite-txt">Identité visuelle</span>
   </a>
-
 </div>
+</figure>
 
+
+<figure>
 <div class="project-feature">
-  <h2>Poster</h2>
-  <a href="project-01.html">
-<img src="images/poster.jpg" />
+  <a class="image-rough" href="projet05.html">
+<img class="rough" src="images/planet.jpg" />
+<span class="rough-txt">Rough</span>
   </a>
-
 </div>
+</figure>
 
+
+<figure>
 <div class="project-feature">
-
-  <h2>Typography</h2>
-  <a href="project-01.html">
-    <img src="images/typo.jpg" />
+  <a class="image-layout" href="projet06.html">
+<img class="layout" src="images/utopia.jpg" />
+<span class="layout-txt">Typographie</span>
   </a>
-
 </div>
+</figure>
+
+
 
 
   </div>
@@ -88,7 +93,7 @@
 
 
       <section id="photos">
-        <h1>photography</h1>
+        <h3>photographie</h3>
 
         <div class="photos-box-container">
 
@@ -121,20 +126,28 @@
 
       </section>
 
-      <section id="aboutme">
-        <h1>about me</h1>
+      <section id="àpropos">
+        <h3>à propos</h3>
+        <figure>
+          <img src="images/about.jpg" alt="">
+        </figure>
+        <p>Je m’appelle Marion SANSON, je suis étudiante<br/>
+          en troisième année de design graphique<br/>à l’ECV Bordeaux.<br/>
+          Ce portfolio regroupe une sélection<br/>de mes
+          travaux scolaires et personnels.
+
 
       </section>
 
-      <section id="contact">
-        <h3>contact</h3>
-        <p>Marion SANSON
-          72, avenue de Vacquey
-          SALLEBOEUF 33370
-          marion.sanson@mail-ecv.fr
-          07 77 73 08 82</p>
 
-<footer>
+
+<footer id="contact">
+    <h1>contact</h1>
+    <p>Marion SANSON<br/>
+      72, avenue de Vacquey<br/>
+      SALLEBOEUF 33370<br/>
+      marion.sanson@mail-ecv.fr<br/>
+      07 77 73 08 82</p>
 </footer>
 
   </body>
