--- a/project-01.html
+++ b/project-01.html
@@ -2,52 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Details of my project</title>
+      <link rel="stylesheet" href="css/master.css">
+      <link rel="stylesheet" href="css/typo.css">
   </head>
   <body>
-    <h1>details of my projects</h1>
 
-<div class="illustration">
-  <h1>name of the illustration</h1>
-  <img src="images/th-320x160-project.png" alt="">
+<div id="details">
+    <h2>linogravure</h2>
+  <h3>BeeGees Illustration</h3>
+
+  <div class="lino-container">
+  <figure>
+    <img src="images/beegees1.jpg" alt="">
+    <img src="images/lino-plaques1.jpg" alt="">
+    <img src="images/lino-plaques2.jpg" alt="">
+  </figure>
 
 </div>
 
-
-
     <a href="index.html">Go back</a>
 
-
-
-    <div class="illustration">
-      <h1>name of the illustration</h1>
-      <img src="images/th-320x160-project.png" alt="">
-
-    </div>
-
-    <a href="index.html">Go back</a>
-
-
-        <div class="illustration">
-          <h1>name of the illustration</h1>
-          <img src="images/th-320x160-project.png" alt="">
-
-        </div>
-
-        <a href="index.html">Go back</a>
-
-
-            <div class="illustration">
-              <h1>name of the illustration</h1>
-              <img src="images/th-320x160-project.png" alt="">
-
-            </div>
-
-            <a href="index.html">Go back</a>
-
-
-
-
+</div>
 
   </body>
 </html>
