--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
   </head>
   <body>
     <header>
+
       <h1>Marion Sanson<br/><span class="portfolio">portfolio</span></h1>
-<nav>
-   <ul id="conteneur">
-     <li><a href="#projets">projets</a></li>
-     <li><a href="#photos">photos</a></li>
-     <li><a href="#àpropos">à propos</a></li>
-     <li><a href="#contact">contact</a></li>
-   </ul>
+
+
+<nav id="main-menu">
+  <ul class="menu">
+    <li><a href="#projets">projets</a></li>
+    <li><a href="#photos">photos</a></li>
+    <li><a href="#àpropos">à propos</a></li>
+    <li><a href="#contact">contact</a></li>
+  </ul>
 </nav>
+
     </header>
 
     <main>
@@ -25,63 +29,65 @@
         <h3>projets</h3>
 
         <div class="project-box-container">
-          <figure>
+
           <div class="project-feature">
-<a class="image-lino" href="project-01.html">
-  <img class="lino" src="images/abeille-lino.jpg"/>
+<a href="project-01.html">
+  <figure>
+  <img src="images/abeille-lino.jpg"/>
+</figure>
   <span class="lino-txt">Linogravure</span>
 </a>
 </div>
-</figure>
 
-<figure>
+
 <div class="project-feature">
-  <a class="image-aqua" href="projet02.html">
-<img class="aqua" src="images/aqua.jpg" />
+  <a href="projet02.html">
+    <figure>
+<img src="images/aqua.jpg" />
+</figure>
 <span class="aqua-txt">Aquarelle</span>
   </a>
 </div>
-</figure>
 
 
-<figure>
 <div class="project-feature">
-  <a class="image-edition" href="projet03.html">
-    <img class="edition" src="images/edition2.jpg" />
+  <a href="projet03.html">
+    <figure>
+    <img src="images/edition2.jpg" />
+  </figure>
     <span class="edition-txt">Edition</span>
   </a>
 </div>
-</figure>
 
 
-<figure>
 <div class="project-feature">
-  <a class="image-identite" href="projet04.html">
-    <img class="identite" src="images/IDvisuelle.jpg" />
+  <a href="projet04.html">
+    <figure>
+    <img src="images/IDvisuelle.jpg" />
+  </figure>
     <span class="identite-txt">Identité visuelle</span>
   </a>
 </div>
-</figure>
 
 
-<figure>
 <div class="project-feature">
-  <a class="image-rough" href="projet05.html">
-<img class="rough" src="images/planet.jpg" />
+  <a href="projet05.html">
+    <figure>
+<img src="images/planet.jpg" />
+</figure>
 <span class="rough-txt">Rough</span>
   </a>
 </div>
-</figure>
 
 
-<figure>
 <div class="project-feature">
-  <a class="image-layout" href="projet06.html">
-<img class="layout" src="images/utopia.jpg" />
+  <a href="projet06.html">
+    <figure>
+<img src="images/utopia.jpg" />
+</figure>
 <span class="layout-txt">Typographie</span>
   </a>
 </div>
-</figure>
 
 
 
@@ -95,46 +101,45 @@
       <section id="photos">
         <h3>photographie</h3>
 
-        <div class="photos-box-container">
+        <div class="photos-container">
 
-          <div class="photos-feature">
+          <div class="photos">
+            <a href="photos.html">
             <figure>
               <img src="images/photo1.jpg" alt="">
             </figure>
-
+          </a>
           </div>
 
-          <div class="photos-box-container">
-
-            <div class="photos-feature">
+            <div class="photos">
+              <a href="photos.html">
               <figure>
                 <img src="images/photo2.jpg" alt="">
               </figure>
-
+</a>
             </div>
 
-            <div class="photos-box-container">
-
-              <div class="photos-feature">
+              <div class="photos">
+                <a href="photos.html">
                 <figure>
                   <img src="images/photo3.jpg" alt="">
                 </figure>
-
+</a>
               </div>
-
         </div>
-
       </section>
 
       <section id="àpropos">
         <h3>à propos</h3>
+
         <figure>
           <img src="images/about.jpg" alt="">
         </figure>
         <p>Je m’appelle Marion SANSON, je suis étudiante<br/>
           en troisième année de design graphique<br/>à l’ECV Bordeaux.<br/>
           Ce portfolio regroupe une sélection<br/>de mes
-          travaux scolaires et personnels.
+          travaux scolaires et personnels.</p>
+
 
 
       </section>
