--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <header>
-
       <h1>Marion Sanson<br/><span class="portfolio">portfolio</span></h1>
 
 
@@ -24,72 +23,67 @@
 
     </header>
 
-    <main>
+
       <section id="projets">
         <h3>projets</h3>
 
         <div class="project-box-container">
 
-          <div class="project-feature">
-<a href="project-01.html">
-  <figure>
+          <article class="project-feature">
+<a class="titre-projet" href="project-01.html">Linogravure</a>
+  <div class="image">
+    <a href="project-01.html">
   <img src="images/abeille-lino.jpg"/>
-</figure>
-  <span class="lino-txt">Linogravure</span>
 </a>
 </div>
+</article>
 
-
-<div class="project-feature">
-  <a href="projet02.html">
-    <figure>
-<img src="images/aqua.jpg" />
-</figure>
-<span class="aqua-txt">Aquarelle</span>
-  </a>
+<article class="project-feature">
+<a class="titre-projet" href="project-02.html">Aquarelle</a>
+<div class="image">
+<a href="project-02.html">
+<img src="images/aqua.jpg"/>
+</a>
 </div>
+</article>
 
-
-<div class="project-feature">
-  <a href="projet03.html">
-    <figure>
-    <img src="images/edition2.jpg" />
-  </figure>
-    <span class="edition-txt">Edition</span>
-  </a>
+<article class="project-feature">
+<a class="titre-projet" href="project-03.html">Edition</a>
+<div class="image">
+<a href="project-03.html">
+<img src="images/edition2.jpg"/>
+</a>
 </div>
+</article>
 
-
-<div class="project-feature">
-  <a href="projet04.html">
-    <figure>
-    <img src="images/IDvisuelle.jpg" />
-  </figure>
-    <span class="identite-txt">Identité visuelle</span>
-  </a>
+<article class="project-feature">
+<a class="titre-projet" href="project-04.html">Identité Visuelle</a>
+<div class="image">
+<a href="project-04.html">
+<img src="images/IDvisuelle.jpg"/>
+</a>
 </div>
+</article>
 
 
-<div class="project-feature">
-  <a href="projet05.html">
-    <figure>
-<img src="images/planet.jpg" />
-</figure>
-<span class="rough-txt">Rough</span>
-  </a>
+<article class="project-feature">
+<a class="titre-projet" href="project-05.html">Rough</a>
+<div class="image">
+<a href="project-05.html">
+<img src="images/planet.jpg"/>
+</a>
 </div>
+</article>
 
 
-<div class="project-feature">
-  <a href="projet06.html">
-    <figure>
-<img src="images/utopia.jpg" />
-</figure>
-<span class="layout-txt">Typographie</span>
-  </a>
+<article class="project-feature">
+<a class="titre-projet" href="project-06.html">Typographie</a>
+<div class="image">
+<a href="project-06.html">
+<img src="images/utopia.jpg"/>
+</a>
 </div>
-
-
+</article>
 
 
   </div>
